--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -358,7 +358,7 @@ html {
     padding: 0;
     box-sizing: border-box;
 }
-
+about
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #333;
